# Rover_2016_2017

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  SPECIFICATION.md  adc.c  adc.h  specification.md
adapterboard/: Makefile
adapterboard/src/: Makefile  adapterboard.c  buf.c  buf.h  spi.c  spi.h  uart.c  uart.h
archive/base/: messagehandler.h
archive/base/inputs/: abstractcontroller.cpp  abstractcontroller.h  xboxcontroller.cpp
archive/base/resources/qml/: Countdown.qml  MainPanel.qml  MapView.qml  NavigationIcon.qml  SettingsView.qml  SpeedGuage.qml  VoltageGuage.qml  main.qml
archive/base/serial/: call_once.h  miniboardupdater.h  packets.cpp
base/: CMakeLists.txt  README.md  RawValues.qml  Settings.qml  SettingsForm.ui.qml  abstractcontroller.cpp  abstractcontroller.h  backend.cpp  backend.h  comm.cpp  comm.h  controlhandler.cpp  controlhandler.h  frsky.cpp  frsky.h  gamepadmonitor.cpp  gamepadmonitor.h  main.cpp  main.qml  mainview.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.html  map.qml  messagehandler.h  miniboardupdater.cpp  miniboardupdater.h  panel.qml  qfi_ADI.cpp  qfi_ADI.h  qml.qrc  rawValues.qml  sendpacket.cpp  serialhandler.cpp  serialhandler.h  superGameScript.js  threadarray.cpp  threadarray.h  video.qml  (+4 more)
base/UI_source/: Settings.qml  button1.qml  countDownTimer.qml  map.html  panel.qml  panelRight.qml  simpleGuage.qml  superGame.html
base/inputs/: abstractcontroller.cpp  abstractcontroller.h  abstractcontroller_BACKUP_4619.h  abstractcontroller_LOCAL_4619.h  abstractcontroller_REMOTE_4619.h  controllerhandler.cpp  controllerhandler.h  frsky.cpp  frsky.h  ps3.cpp  ps3.h  xboxcontroller.cpp  xboxcontroller.h
base/resources/: qml.qrc
base/resources/qml/: AttitudeIndicator.qml  Countdown.qml  DataView.qml  MainPanel.qml  MapView.qml  MultiGauge.qml  NavigationIcon.qml  Settings.qml  SettingsView.qml  SidebarPanel.qml  Timer.qml  VoltageGuage.qml  countDownTimer.qml  main.qml  map.qml  panel.qml
base/resources/web/: map.html  map.js  mapRefactor.js
base/serial/: RawValues.qml  comm.cpp  comm.h  miniboardupdater.cpp  miniboardupdater.h  packets.cpp  packets.h  serialhandler.cpp  serialhandler.h  singleton.h
base/threading/: threadarray.cpp  threadarray.h
basestation/: RoverBaseStation.py
basestation/Framework/: FreeSkyControllerCore.py  GameControllerCore.py  LoggingCore.py  MapProcessorCore.py  MiniBoardIOCore.py  MotionProcessorCore.py  ReadUpdater.py  ReadUpdaterCore.py  RoverComm.py  RoverControllerCore.py  SettingsCore.py  XBOXControllerCore.py
basestation/Interface/: InterfaceCore.py
basestation/Interface/DataView/: DataViewCore.py
basestation/Interface/LiveLogs/: LiveLogsCore.py
basestation/Interface/Map/: MapCore.py
basestation/Resources/Libraries/: goompy.py
basestation/Resources/UI/: RoverBaseStation.ui  color_toggle.qml  color_toggle.qmlc  mapView.qml  map_view.qml  map_view.qmlc
basestation/Resources/new_ui_work_4-30-17/: RoverBaseStation.ui  scaling_bar.ui
basestation/Resources/web/: map.html  map.js
common/: CMakeLists.txt  README.md  SPECIFICATION.md  base_packets.py  basepackets.py  codegen.py  commgen.h  docparse.py  filegen.py  io.c  io.h  miniboard_gui.pyw  miniboard_testdrive.pyw  packethandler.cpp  packethandler.h  packets.cpp  packets.h  packets.proto  soil-sensor-test.py
etc/: README.md  Rover.rules  codegen.py  docparse.py  packets.c  packets.h
miniboard/: README.md
miniboard/firmware/: Makefile
miniboard/firmware/src/: Makefile  adc.c  adc.h  autonomous.c  autonomous.h  ax12.c  ax12.h  callsign.c  callsign.h  comm.c  comm.h  commgen.c  commgen.h  compass.c  compass.h  gpio.c  gpio.h  gps.c  gps.h  imu.c  imu.h  miniboard.c  s-bus.c  s-bus.h  sabertooth.c  sabertooth.h  scienceboard.c  scienceboard.h  soil_sensor.c  soil_sensor.h  spi.c  spi.h  tetrad.c  tetrad.h  time.c  time.h  uart.c  uart.h  videoswitch.c  videoswitch.h
new radio/adafruit firmware/rx/: rx.ino
new radio/adafruit firmware/tx/: tx.ino
new radio/lorabee/: lorabee.ino
new radio/original test firmware/rx_test/: rx_test.ino
new radio/original test firmware/tx_test2/: tx_test2.ino
scienceboard/: Miniboard_Interface.txt
scienceboard/firmware/: Makefile
scienceboard/firmware/src/: Makefile  comm.c  comm.h  crc.c  crc.h  sciboard.c  soilprobe.c  soilprobe.h  uart.c
test/: CMakeLists.txt  README.md  logger.cpp  testio.cpp  testio.h
tetrad motor drivers/: tetrad-rover-firmware.ino
tetrad motor drivers/tetrad-rover-firmware/: tetrad-rover-firmware.ino
user inputs/JoystickTest/: JoystickTest.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  resbuttonicons.qrc  xinputGamepad.h  xinputgamepad.cpp
